Test 100% model classes